# fair-enough-metrics

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  restart_deployment.sh  setup.py
.github/workflows/: test.yml
api/: config.py  main.py  metrics_api.py  metrics_test.py
metrics/: a1_access_protocol.py  a1_data_authorization.py  a1_data_protocol.py  a1_metadata_authorization.py  a1_metadata_protocol.py  a2_metadata_persistent.py  f1_data_identifier_persistent.py  f1_metadata_identifier_persistent.py  f1_metadata_identifier_unique.py  f1_unique_persistent_identifier.py  f2_grounded_metadata.py  f2_machine_readable_metadata.py  f2_structured_metadata.py  f3_data_identifier_in_metadata.py  f3_identifier_in_metadata.py  f3_metadata_identifier_in_metadata.py  f4_searchable.py  i1_data_knowledge_representation.py  i1_data_knowledge_representation_semantic.py  i1_data_knowledge_representation_structured.py  i1_data_knowledge_representation_weak.py  i1_knowledge_representation.py  i1_metadata_knowledge_representation.py  i1_metadata_knowledge_representation_semantic.py  i1_metadata_knowledge_representation_structured.py  i1_metadata_knowledge_representation_weak.py  i2_fair_vocabularies.py  i2_fair_vocabularies_known.py  i2_fair_vocabularies_resolve.py  i3_metadata_contains_outward_links.py  r1_accessible_license.py  r1_community_standard.py  r1_includes_license.py  r1_includes_standard_license.py
metrics_todo/: a2_metadata_longevity.py  f4_searchable.py  i3_check_sparql_endpoint.py  i3_data_management_plan.py  i3_use_qualified_references.py  r2_detailed_provenance.py  r3_meets_community_standards.py
resources/: dataset_schema.shacl.ttl  metadata_sample_fail.ttl  metadata_sample_success.ttl
resources/metrics_todo/: a2_metadata_longevity.py  i3_check_sparql_endpoint.py  r3_meets_community_standards.py
tests/: conftest.py  metrics_compare.py  services_compare.py  test_metrics.py  test_metrics_list.py
